--- a/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
+++ b/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Authors>Fireflies.Tech</Authors>
+	<Description>Fireflies GraphQL core</Description>
+	<Copyright>2023 Fireflies.tech</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,10 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fireflies.GraphQL.Contract\Fireflies.GraphQL.Contract.csproj" />
-    <ProjectReference Include="..\IoC\Fireflies.IoC.Core\Fireflies.IoC.Core.csproj" />
+    <ProjectReference Include="..\Fireflies.GraphQL.Abstractions\Fireflies.GraphQL.Abstractions.csproj" />
+    <ProjectReference Include="..\IoC\Fireflies.IoC.Abstractions\Fireflies.IoC.Abstractions.csproj" />
     <ProjectReference Include="..\IoC\Fireflies.IoC.TinyIoC\Fireflies.IoC.TinyIoC.csproj" />
-    <ProjectReference Include="..\Logging\Fireflies.Logging.Core\Fireflies.Logging.Core.csproj" />
+    <ProjectReference Include="..\Logging\Fireflies.Logging.Abstractions\Fireflies.Logging.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
