--- a/Logging/Fireflies.Logging.Abstractions/Fireflies.Logging.Abstractions.csproj
+++ b/Logging/Fireflies.Logging.Abstractions/Fireflies.Logging.Abstractions.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <Authors>Fireflies.Tech</Authors>
+	  <Description>Fireflies logging abstractions</Description>
+	  <Copyright>2023 Fireflies.tech</Copyright>
   </PropertyGroup>
 
 </Project>
