--- a/Logging/Fireflies.Logging.NLog/Fireflies.Logging.NLog.csproj
+++ b/Logging/Fireflies.Logging.NLog/Fireflies.Logging.NLog.csproj
@@ -1,9 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Authors>Fireflies.Tech</Authors>
+	<Description>Fireflies NLog integration</Description>
+	<Copyright>2023 Fireflies.tech</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fireflies.Logging.Core\Fireflies.Logging.Core.csproj" />
+    <ProjectReference Include="..\Fireflies.Logging.Abstractions\Fireflies.Logging.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
