--- a/Fireflies.GraphQL.AspNet/Fireflies.GraphQL.AspNet.csproj
+++ b/Fireflies.GraphQL.AspNet/Fireflies.GraphQL.AspNet.csproj
@@ -12,6 +12,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	</ItemGroup>
