--- a/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
+++ b/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
@@ -10,6 +10,10 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
+	
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="GraphQL-Parser" Version="8.1.0" />
