--- a/Logging/Fireflies.Logging.NLog/Fireflies.Logging.NLog.csproj
+++ b/Logging/Fireflies.Logging.NLog/Fireflies.Logging.NLog.csproj
@@ -16,6 +16,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Fireflies.Logging.Abstractions\Fireflies.Logging.Abstractions.csproj" />
 	</ItemGroup>
 
