Changed sync BlockingCollection to AsyncProducerConsumerQueue<JObject>

--- a/Fireflies.GraphQL.AspNet/Fireflies.GraphQL.AspNet.nuspec
+++ b/Fireflies.GraphQL.AspNet/Fireflies.GraphQL.AspNet.nuspec
@@ -15,5 +15,6 @@
 		<dependency id="Fireflies.IoC.Abstractions" version="$version$" />
 		<dependency id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" />
 		<dependency id="Newtonsoft.Json" version="13.0.2" />
+		<dependency id="Nito.AsyncEx" version="5.1.2" />
 	</dependencies>
 </package>
