--- a/Fireflies.GraphQL.AspNet/Fireflies.GraphQL.AspNet.csproj
+++ b/Fireflies.GraphQL.AspNet/Fireflies.GraphQL.AspNet.csproj
@@ -18,6 +18,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+		<PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
