Implemented sorting as middleware and refactored a lot of dependent code - ArgumentBuilder now uses ValueAccessor (formaly VariableAccessor) - WrapperGenerator now has one way to handle both properties and methods

--- a/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
+++ b/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
@@ -30,4 +30,8 @@
 		<ProjectReference Include="..\Logging\Fireflies.Logging.Abstractions\Fireflies.Logging.Abstractions.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Sorting\" />
+	</ItemGroup>
+
 </Project>
