--- a/LoadTest/LoadTest.csproj
+++ b/LoadTest/LoadTest.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="NBomber" Version="4.1.0" />
+    <PackageReference Include="NBomber.Http" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
