Renamed Fireflies.GraphQL.Extensions.EntityFramework to Fireflies.GraphQL.Extensions.EntityFrameworkCore

--- a/Extensions/Fireflies.GraphQL.Extensions.EntityFrameworkCore/Fireflies.GraphQL.Extensions.EntityFrameworkCore.csproj
+++ b/Extensions/Fireflies.GraphQL.Extensions.EntityFrameworkCore/Fireflies.GraphQL.Extensions.EntityFrameworkCore.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Images\Icon-128x128.png" Link="Icon-128x128.png">
+      <PackagePath>\</PackagePath>
+      <Pack>true</Pack>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
