--- a/Demos/Fireflies.GraphQL.Demo/Fireflies.GraphQL.Demo.csproj
+++ b/Demos/Fireflies.GraphQL.Demo/Fireflies.GraphQL.Demo.csproj
@@ -8,9 +8,15 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="6.5.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Extensions\Fireflies.GraphQL.Extensions.EntityFrameworkCore\Fireflies.GraphQL.Extensions.EntityFrameworkCore.csproj" />
 		<ProjectReference Include="..\..\Fireflies.GraphQL.AspNet\Fireflies.GraphQL.AspNet.csproj" />
 		<ProjectReference Include="..\..\Fireflies.GraphQL.Abstractions\Fireflies.GraphQL.Abstractions.csproj" />
 		<ProjectReference Include="..\..\Fireflies.GraphQL.Core\Fireflies.GraphQL.Core.csproj" />
