--- a/Demos/Fireflies.GraphQL.Demo/Fireflies.GraphQL.Demo.csproj
+++ b/Demos/Fireflies.GraphQL.Demo/Fireflies.GraphQL.Demo.csproj
@@ -20,8 +20,7 @@
 		<ProjectReference Include="..\..\Fireflies.GraphQL.AspNet\Fireflies.GraphQL.AspNet.csproj" />
 		<ProjectReference Include="..\..\Fireflies.GraphQL.Abstractions\Fireflies.GraphQL.Abstractions.csproj" />
 		<ProjectReference Include="..\..\Fireflies.GraphQL.Core\Fireflies.GraphQL.Core.csproj" />
-		<ProjectReference Include="..\..\IoC\Fireflies.IoC.Autofac\Fireflies.IoC.Autofac.csproj" />
-		<ProjectReference Include="..\..\Logging\Fireflies.Logging.NLog\Fireflies.Logging.NLog.csproj" />
+		<ProjectReference Include="..\..\Fireflies.Shared\Logging\Fireflies.Logging.NLog\Fireflies.Logging.NLog.csproj" />
 	</ItemGroup>
 
 </Project>
