--- a/Demos/Fireflies.GraphQL.Federation/Fireflies.GraphQL.FederationDemo.csproj
+++ b/Demos/Fireflies.GraphQL.Federation/Fireflies.GraphQL.FederationDemo.csproj
@@ -8,13 +8,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="6.5.0" />
+		<PackageReference Include="Fireflies.IoC.Autofac" Version="1.0.0" />
+		<PackageReference Include="Fireflies.Logging.NLog" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Fireflies.GraphQL.AspNet\Fireflies.GraphQL.AspNet.csproj" />
 		<ProjectReference Include="..\..\Fireflies.GraphQL.Core\Fireflies.GraphQL.Core.csproj" />
-		<ProjectReference Include="..\..\Fireflies.Shared\IoC\Fireflies.IoC.Autofac\Fireflies.IoC.Autofac.csproj" />
-		<ProjectReference Include="..\..\Fireflies.Shared\Logging\Fireflies.Logging.NLog\Fireflies.Logging.NLog.csproj" />
 	</ItemGroup>
 
 </Project>
