--- a/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
+++ b/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.csproj
@@ -19,9 +19,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fireflies.IoC.Abstractions" Version="1.0.0" />
-		<PackageReference Include="Fireflies.IoC.TinyIoC" Version="1.0.0" />
-		<PackageReference Include="Fireflies.Logging.Abstractions" Version="1.0.0" />
+		<PackageReference Include="Fireflies.IoC.Abstractions" Version="1.0.1" />
+		<PackageReference Include="Fireflies.IoC.TinyIoC" Version="1.0.1" />
+		<PackageReference Include="Fireflies.Logging.Abstractions" Version="1.0.1" />
+		<PackageReference Include="Fireflies.Utility.Reflection" Version="1.0.1" />
 		<PackageReference Include="GraphQL-Parser" Version="8.1.0" />
 	</ItemGroup>
 
