--- a/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.nuspec
+++ b/Fireflies.GraphQL.Core/Fireflies.GraphQL.Core.nuspec
@@ -11,9 +11,10 @@
 		<tags>fireflies graphql core</tags>
 	</metadata>
 	<dependencies>
-		<dependency id="Fireflies.IoC.Abstractions" version="1.0.0" />
-		<dependency id="Fireflies.IoC.TinyIoC" version="1.0.0" />
-		<dependency id="Fireflies.Logging.Abstractions" version="1.0.0" />
+		<dependency id="Fireflies.IoC.Abstractions" version="1.0.1" />
+		<dependency id="Fireflies.IoC.TinyIoC" version="1.0.1" />
+		<dependency id="Fireflies.Logging.Abstractions" version="1.0.1" />
+		<dependency id="Fireflies.Utility.Reflection" version="1.0.1" />
 		<dependency id="GraphQL-Parser" version="8.1.0" />
 	</dependencies>
 </package>
