--- a/Demos/Fireflies.GraphQL.ClientDemo/Fireflies.GraphQL.ClientDemo.csproj
+++ b/Demos/Fireflies.GraphQL.ClientDemo/Fireflies.GraphQL.ClientDemo.csproj
@@ -7,4 +7,8 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>10</LangVersion>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+	</ItemGroup>
 </Project>
