Made it possible for authorzation attributes to get input data (or other arguments)

--- a/Fireflies.GraphQL.Abstractions/Fireflies.GraphQL.Abstractions.csproj
+++ b/Fireflies.GraphQL.Abstractions/Fireflies.GraphQL.Abstractions.csproj
@@ -11,6 +11,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>Icon-128x128.png</PackageIcon>
 		<RepositoryUrl>https://github.com/firefliestech/fireflies.graphql</RepositoryUrl>
+		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
