--- a/Demos/Server/Fireflies.GraphQL.Demos.Server.Authors/Fireflies.GraphQL.Demos.Server.Authors.csproj
+++ b/Demos/Server/Fireflies.GraphQL.Demos.Server.Authors/Fireflies.GraphQL.Demos.Server.Authors.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Autofac" Version="7.0.1" />
-		<PackageReference Include="Fireflies.IoC.Autofac" Version="1.1.1" />
-		<PackageReference Include="Fireflies.Logging.NLog" Version="1.1.1" />
+		<PackageReference Include="Autofac" Version="7.1.0" />
+		<PackageReference Include="Fireflies.IoC.Autofac" Version="1.2.3" />
+		<PackageReference Include="Fireflies.Logging.NLog" Version="1.2.3" />
 	</ItemGroup>
 
 	<ItemGroup>
